[package]
name = "tokyo-metro-lib-tama-reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voyager = { version = "0.2" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = "0.11"
futures = "0.3"
inquire = "0.2.1"